Finalizado para publicar

--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -8,10 +8,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <link rel="stylesheet" href="recursos/jquery-ui.css"/>  
         <link rel="stylesheet" href="recursos/default.css"/>
-        <title>SFT Inconsistencia</title>
-        <!--<script src="recursos/JS/jquery-2.1.1.js"></script>-->
+        <title>SFT Tommasi</title>
         <script src="recursos/JS/script.js"></script>
-        
     </h:head>
 
     <h:body>
@@ -21,20 +19,14 @@
 
                 <div id="logo"><a href="index.php"><img src="recursos/img/logo.png"/></a></div>
                 <!-- menu começa aqui -->
-                <h:form>
                     <nav>
                     <ul>
-                        <li><a href="">Home</a></li>
+                        <li><a href="">Intranet</a></li>
                         <li>|</li>
-                        <li><a href="">Descricao</a></li>
-                        <li><a href="">Ranking</a></li>
-                        <div id="menu_left">
-                            <li><a href="">Glosa</a></li>
-                            <li><a href="">Intranet</a></li>
-                        </div>
+                        <li><a href="">Inconsistencia</a></li>  
+                        <li><a href="">Glosa</a></li>
                     </ul>
                 </nav>
-                </h:form>
                 <!-- menu termina aqui -->
 
             </ui:insert>
@@ -56,7 +48,7 @@
                 <!-- footer começa aqui -->
                 <div id="autor">
                     <img src="recursos/img/logo_inv.png"/>
-                    <p> Todos os direitos reservados | Adriano Reis</p>
+                    <p> &copy; Todos os direitos reservados | Adriano Reis</p>
                 </div>
                 <div id="display">Home | Descricao</div>
                 <!-- footer termina aqui -->
