--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -25,6 +25,7 @@
                         <li>|</li>
                         <li><a href="">Inconsistencia</a></li>  
                         <li><a href="">Glosa</a></li>
+                        <li><a href="">OS Não Paga</a></li>
                     </ul>
                 </nav>
                 <!-- menu termina aqui -->
