Os Não Paga sem data de Registro

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -236,11 +236,11 @@
                         <h:outputLabel value="#{i.partNmPaciente}" />
                     </p:column>
                     
-                    <p:column headerText="Data">
+<!--                    <p:column headerText="Data">
                         <h:outputText value="#{i.sftCtrlHistoricoList.get(0).getHistDtRegis()}">
                             <f:convertDateTime pattern="dd/MM/yyyy" />
                         </h:outputText>
-                    </p:column>
+                    </p:column>-->
 
                     <p:column style="width:32px;text-align: center">
                         <p:commandButton update=":form_part:partDetail" oncomplete="PF('partDialog').show()" icon="ui-icon-search" title="View">
